Bump memory-cap to 400MB and StringTableSize *= 4
This is after hitting some OoM errors while testing in GraalVM 22.1 (CE)

While there, drop '-Xverify:none' as recent JVMs are moaning about it.